# Cpp-Template-GTest-on-Gitlab

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md
docs/: CMakeLists.txt  Doxyfile
docs/sphinx/source/: conf.py  index.rst  refs.bib
docs/sphinx/source/contributor/: citing.rst  conventions.rst  dev_procedures.rst
docs/sphinx/source/contributor/building/: cmake.rst  git_guide.rst  protocols.rst
docs/sphinx/source/contributor/documentation/: doc_guide.rst
docs/sphinx/source/contributor/testing/: GTest.rst  pytest.rst
docs/sphinx/source/lib_doc/General/: code-examples-demo.rst  getting-started.rst  glossary.rst  notations.rst  references.rst
include/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/bigint/: CMakeLists.txt  bigInt.hpp  bigIntMPZ.cpp  bigIntMPZ.hpp  bigint.hpp  bigintmpz.cpp  bigintmpz.hpp
src/utilities/: CMakeLists.txt  evaluation.cpp  evaluation.hpp  random.cpp  random.hpp
tests/: CMakeLists.txt  launch_tests.cpp
tests/func_tests/: CMakeLists.txt
tests/unit_tests/: BigIntMpz_UT.cpp  CMakeLists.txt  homemade_macros_gtest.cpp  homemade_macros_gtest.hpp
tests/unit_tests/bigint/: CMakeLists.txt  bigIntMpzUT.cpp
tests/unit_tests/utilities/: CMakeLists.txt  utilitiesEvaluationUT.cpp  utilitiesRandomUT.cpp
